[build-system]
requires = [ "scikit-build-core", "pybind11",]
build-backend = "scikit_build_core.build"

[project]
name = "panda-python"
version = "1.0.0"
description = "Python bindings for the Panda robot"
requires-python = ">=3.9"
dependencies = [ "websockets>=11.0", "requests", "numpy>=2.0",]
authors = [
    { name = "Jean Elsner", email = "jean.elsner@tum.de" },
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [ "python", "real-time", "control", "robot", "franka", "emika", "panda"]
classifiers = [
    "Intended Audience :: Science/Research", 
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: Apache Software License", 
    "Topic :: Scientific/Engineering", 
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
examples = [ 
    "roboticstoolbox-python", 
    "matplotlib", 
    "spatialmath-python", 
    "ansitable", 
    "qpsolvers",
]
docs = [ 
    "furo", 
    "sphinx-reredirects", 
    "sphinx",
]
dev = [ "pybind11-stubgen",]

[project.scripts]
panda-lock = "panda_py.cli:lock"
panda-unlock = "panda_py.cli:unlock"
panda-reboot = "panda_py.cli:reboot"
panda-take-control = "panda_py.cli:take_control"
panda-release-control = "panda_py.cli:release_control"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
build = [ "cp39-*", "cp310-*", "cp311-*", "cp312-*",]
skip = [ "pp*", "*musllinux*",]
environment = "LIBFRANKA_VER=0.9.2"

[tool.cibuildwheel.linux]
before-all = [ "./bin/before_install_centos.sh",]
archs = [ "x86_64",]

[tool.scikit-build.cmake]
build-type = "Release"

[tool.scikit-build.wheel]
packages = [ "src/panda_py",]

[tool.scikit-build.cmake.define]
LIBFRANKA_VER = "0x000902"
